# stm32f4-coremark

./: CMakeLists.txt  README.md  stm32f4discovery.cfg
apps/: CMakeLists.txt  main.cpp  main.h
board/: .mxproject  Makefile  STM32F407IGHx_FLASH.ld  board.ioc
board/Core/Inc/: main.h  stm32f4xx_it.h
board/Core/Src/: can.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
cmake/: stm32.cmake
include/Bsp/: USB.h  led.h
include/CoreMark/: coremark.h
include/CoreMark/Simple/: core_portme.h
include/Support/: ExternC.h
libs/: CMakeLists.txt
libs/Apps/: main.cpp
libs/Bsp/: CMakeLists.txt  USB.cpp  led.c  led.cpp
libs/CoreMark/: CMakeLists.txt  core_list_join.c  core_main.c  core_matrix.c  core_state.c  core_util.c  coremark.h
libs/CoreMark/Simple/: core_portme.c  core_portme.h
libs/Support/: CMakeLists.txt  write.cpp
support/: CMakeLists.txt
